Fixed unwanted behavior on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap');
 
-html, main{
+html, main, .Main{
   height: 100%;
 }
 
