--- a/src/stylesheets/Skills.css
+++ b/src/stylesheets/Skills.css
@@ -1,6 +1,6 @@
 .Skills {
   width: 100%;
-  height: 500vh;
+  height: 500%;
   background-color: #2D4459;
   margin: 0;
 }
@@ -9,7 +9,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  margin: 20vh auto 0 auto;
+  margin: 20% auto 0 auto;
   width: 90%;
 }
 
