--- a/src/stylesheets/TitleCard.css
+++ b/src/stylesheets/TitleCard.css
@@ -1,7 +1,7 @@
 
 .TitleCard {
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   user-select: none;
   background-color: #2D4459;
@@ -88,7 +88,7 @@
 .TransitionContainer {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
